Moved the things

--- a/assets/index.html
+++ b/assets/index.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="index.css">
 	</head>
 	<body>
-		<section class="todoapp">
+		<section class="todoapp"> <!--Root-->
 			<header class="header">
 				<h1>todos</h1>
 				<input class="new-todo" placeholder="What needs to be done?" autofocus>
